# SatisfactoryRecipes

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  launch_script.py  launch_script.pyw  pyproject.toml  pysidedeploy.spec  tech_debt.md
.github/workflows/: release.yml
SatisfactoryRecipes/: __main__.py  gui.py
SatisfactoryRecipes/doc_parsing/: doc_parser.py
SatisfactoryRecipes/recipes/: constants.py  production_chain.py  recipe_classes.py  recipe_tools.py
src/satisfactory_recipes/: __init__.py  __main__.py  config.py  docs_parser.py  info_classes.py  interactive_mode.py  main.py  production_chain.py  search.py  stupid_classes.py
src/satisfactory_recipes/gui/: __init__.py  app.py  appearance.py  dialog_components.py  dialogs.py  main_window.py  number_format.py  recipe_format.py  view_state.py  widgets.py
tests/: conftest.py  support.py  test_basic.py  test_config.py  test_docs_parser.py  test_gui_appearance.py  test_gui_dialog_components.py  test_gui_dialogs.py  test_gui_main_window.py  test_gui_number_format.py  test_gui_recipe_format.py  test_gui_widgets.py  test_gui_workflow.py  test_info_classes.py  test_integration.py  test_interactive_mode.py  test_main.py  test_production_chain.py  test_satrec.py  test_stupid_classes.py
