[project]
name = "satisfactory-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Suggs", email = "jacob.suggs@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
satisfactory-recipes = "satisfactory_recipes:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
