[project]
name = "satisfactory-recipes"
version = "0.2.0"
description = "A calculator for "
readme = "README.md"
authors = [
    { name = "Jacob Suggs", email = "jacob.suggs@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
]

[project.scripts]
sat-rec = "satisfactory_recipes.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pytest>=9.1.0",
]
